--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="LiraGames - Plataforma de jogos educacionais e entretenimento interativo">
     <title>LiraGames - Jogos & Educação</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -193,6 +193,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="public/script.js"></script>
 </body>
 </html>
